@@ -1,9 +1,7 @@
 CONSOLE MESSAGE: line 0: Not allowed to load local resource: compass.jpg
-CONSOLE MESSAGE: line 0: Not allowed to load local resource: compass.jpg
-
 Test that a remote video element can not use a local poster
 
-This test only works in DRT
+This test requires the run-webkit httpd server (run-webkit-httpd)
 
 SUCCESS: Local image failed to load from remote page.
 
