@@ -39,7 +39,10 @@
             function checkPoster()
             {
                 document.body.offsetLeft;
-                if (video.clientHeight == 0 && video.clientWidth == 0)
+
+                // The poster image is 128x128, so if it loads the element should be that size, otherwise
+                // it should be the default 300x150.
+                if (video.clientHeight == 150 && video.clientWidth == 300)
                     logResult("Local image failed to load from remote page.", true);
                 else
                     logResult("Local image loaded from remote page.", false);
@@ -65,7 +68,7 @@
 
         <p>Test that a remote video element can not use a local poster</p>
 
-        <p>This test only works in DRT</p>
+        <p>This test requires the run-webkit httpd server (run-webkit-httpd)</p>
 
     </body>
 </html>
