@@ -1,3 +1,12 @@
+2010-01-12  Eric Carlson  <eric.carlson@apple.com>
+
+        Unreviewed, build fix.
+
+        Update test and results after r53146.
+
+        * http/tests/security/local-video-poster-from-remote-expected.txt:
+        * http/tests/security/local-video-poster-from-remote.html:
+
 2010-01-12  Philippe Normand  <pnormand@igalia.com>
 
         Rubber-stamped by Gustavo Noronha Silva.
